[package]
name = "readable-hashes"
version = "0.1.0"
authors = ["Krishna Chittur <kchittur@utexas.edu>"]
license = "CC-BY-4.0 OR GPL-3.0"
edition = "2018"
description = "Get the SHA-256 of a bytestring as a readable sequence of 16 English words."
repository = "https://github.com/krishnachittur/readable-hashes"
keywords = ["hash", "crypto", "communication", "text"]

[dependencies]
sha2 = "0.8"
lazy_static = "1.4"
byteorder = "1.3"